--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<a href=https://youtu.be/iOIF74Hk80A?t=55> My current fav song is kasoor</a>
     <script type="text/javascript" src="./script.js">
 </script>
 
